--- a/src/app/core/shell/header/header.component.html
+++ b/src/app/core/shell/header/header.component.html
@@ -45,7 +45,7 @@
           </li>
 
           <li class="nav-item">
-          <a class="waves-effect waves-dark mt-2 ml-2" href="#" ><i class="material-icons">https</i></a>
+          <a class="waves-effect waves-dark mt-2 ml-2" routerLink="login" ><i class="material-icons">https</i></a>
           </li>
         </ul>
       </div>
